fix: resolve scanner/persistence bugs and migrate broker model classes
- Fix SignalPersistenceService: signals were built but never persisted to DB (missing signalStore.save)
- Fix Stock.Sector.valueOf("Oil & Gas"): add Sector.fromDbName() mapping for DB string-to-enum conversion
- Fix ScanService.convertScanResultToResponse: setSymbolsScanned used buy count instead of actual symbols scanned
- Fix SignalController.getLatestSignals: sort on unmodifiable list from stream().toList()
- Fix ScanService: now runs both swing and price-action engines, derives signal date from latest candles
- Migrate broker model classes (Position, Order, etc.) to core domain package
- Add signal pipeline architecture (SignalPipeline, SignalPersistenceService, SentimentGate, DailySignalOrchestrator)
- Add NSE holidays table and service for scheduler
- Add RiskCalculator domain class
- Update dashboard components and API client

Co-authored-by: Claude